# archergate

./: .gitignore  CHANGELOG.md  Cargo.toml  MONETIZATION.md  PUBLISHING.md  README.md  package.json  vercel.json
.github/workflows/: ci.yml  release.yml
api/: mcp.mjs  sdk-beta.js  track.js
assets/: email-template.txt  license-landing-page.html  sdk-beta.html
assets/outreach/: blender-post.md  github-readme-social.md  plugin-dev-post.md  tauri-electron-post.md  unity-post.md
assets/submissions/: awesome-rust-pr.md  awesome-selfhosted-pr.md  awesome-tauri-pr.md  product-hunt-draft.md  show-hn-draft.md  smithery-listing.md
crates/archergate-core/: Cargo.toml
crates/archergate-core/src/: blend.rs  decision_vector.rs  dna_crypto.rs  lib.rs  ngram.rs  provenance.rs  session_analytics.rs  storage.rs  types.rs
crates/archergate-license/: Cargo.toml  README.md
crates/archergate-license-server/: Cargo.toml
crates/archergate-license-server/src/: db.rs  handlers.rs  lib.rs  main.rs
crates/archergate-license-server/tests/: e2e.rs
crates/archergate-license/include/: archergate_license.h
crates/archergate-license/src/: cache.rs  client.rs  error.rs  ffi.rs  fingerprint.rs  integrity.rs  lib.rs  types.rs
crates/archergate-license/tests/: integration.rs
crates/archergate-tauri/: Cargo.toml  tauri.conf.json
crates/archergate-tauri/capabilities/: default.json
crates/archergate-tauri/icons/: icon.icns
crates/archergate-tauri/src/: main.rs
crates/archergate-tauri/src/ipc/: server.rs  types.rs
examples/minimal/: Cargo.toml  README.md  docker-compose.yml  run.sh
examples/minimal/src/: main.rs
public/: llms.txt  machine-bound-licensing-explained.html  robots.txt  sitemap.xml
public/.well-known/: mcp-server-card.json
scripts/: build-release-binaries.sh
