[package]
name = "archergate-core"
version.workspace = true
edition.workspace = true
description = "ARCHERGATE creative memory engine — learns who you are as a producer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sysinfo = "0.30"
getrandom = "0.2"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
