[package]
name = "archergate-license-server"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "License validation server for Archergate — self-hosted or cloud-deployed"
authors = ["Archergate Contributors"]
repository = "https://github.com/lailaarcher/archergate"
homepage = "https://archergate.io/developers"
documentation = "https://docs.rs/archergate-license-server"

[[bin]]
name = "archergate-license-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
