[package]
name = "archergate-minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
archergate-license = "0.1.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "minimal"
path = "src/main.rs"
